--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -179,6 +179,7 @@ The OKE Load Balancer parameters concern mainly the following:
 
 . the preferred Availability Domain you want to place the load balancers
 . the type of load balancer (public/internal)
+. the list of destination ports to allow for public ingress
 
 Even if you set the load balancer subnets to be internal, you still need to set the correct {uri-oci-loadbalancer-annotations}[annotations] when creating internal load balancers. Just setting the subnet to be private is *_not_* sufficient.
 
