Allow public ingress from anywhere to ports 80 and 443 (#205)
* Allow public ingress from anywhere to ports 80 and 443

Signed-off-by: Noel Dcosta <noel.dcosta@oracle.com>

* Support to specify custom list of destination ports for public LB security list

Signed-off-by: Noel Dcosta <noel.dcosta@oracle.com>

* updated docs for public_lb_ports

Signed-off-by: Noel Dcosta <noel.dcosta@oracle.com>

* Updated order of variables

Signed-off-by: Noel Dcosta <noel.dcosta@oracle.com>

* Set variable type for public_lb_ports

Signed-off-by: Noel Dcosta <noel.dcosta@oracle.com>

* Updated terraform options doc

Signed-off-by: Noel Dcosta <noel.dcosta@oracle.com>

--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -205,7 +205,7 @@ newbits = {
 
 |`bastion_access`
 |CIDR block in the form of a string to which ssh access to the bastion must be restricted to. *_ANYWHERE_* is equivalent to 0.0.0.0/0 and allows ssh access from anywhere.
-|XXX.XXX.XXX.XXX/YY
+|XYZ.XYZ.XYZ.XYZ/YZ
 |ANYWHERE
 
 |`bastion_enabled`
@@ -554,6 +554,11 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 |internal/public
 |public
+
+|`public_lb_ports`
+|The list of destination ports to allow for public ingress.
+|`e.g.: [80,443,8080]`
+|`[80, 443]`
 
 |`waf_enabled`
 |Whether to enable WAF monitoring and protection of public load balancers.
