--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -136,22 +136,22 @@ Ensure you review the {uri-terraform-dependencies}[dependencies].
 [source]
 ----
 netnum = {
-  operator   = 33
-  bastion = 32
-  int_lb  = 16
-  pub_lb  = 17
-  workers = 1
+  operator   = 33,
+  bastion    = 32,
+  int_lb     = 16,
+  pub_lb     = 17,
+  workers    = 1
 }
 ----
 |
 [source]
 ----
 netnum = {
-  bastion = 32
-  operator = 33
-  int_lb  = 16
-  pub_lb  = 17
-  workers = 1}
+  bastion  = 32,
+  operator = 33,
+  int_lb   = 16,
+  pub_lb   = 17,
+  workers  = 1}
 ----
 
 |`newbits`
@@ -160,20 +160,20 @@ netnum = {
 [source]
 ----
 newbits = {
-  operator   = 13
-  bastion = 13
-  lb      = 11
-  workers = 2
+  operator   = 13,
+  bastion    = 13,
+  lb         = 11,
+  workers    = 2
 }
 ----
 |
 [source]
 ----
 newbits = {
-  operator   = 13
-  bastion = 13
-  lb      = 11
-  workers = 2
+  operator   = 13,
+  bastion    = 13,
+  lb         = 11,
+  workers    = 2
 }
 ----
 
@@ -331,14 +331,14 @@ newbits = {
 [source]
 ----
 availability_domains = {
-  bastion     = 1
+  bastion     = 1,
   operator    = 1
 }
 ----
 |
 [source]
 ----
-  bastion     = 1
+  bastion     = 1,
   operator    = 1
 ----
 
@@ -362,17 +362,17 @@ tags = {
   # vcn, bastion and operator tags are required
   # add more tags in each as desired
   vcn = {
-    # department = "finance"
+    # department = "finance",
     environment = "dev"
   }
   bastion = {
-    department  = "finance"
-    environment = "dev"
+    department  = "finance",
+    environment = "dev",
     role        = "bastion"
   }
   operator = {
-    department = "finance"
-    environment = "dev"
+    department = "finance",
+    environment = "dev",
     role        = "operator"
   }
 }
@@ -384,17 +384,17 @@ tags = {
   # vcn, bastion and operator tags are required
   # add more tags in each as desired
   vcn = {
-    # department = "finance"
+    # department = "finance",
     environment = "dev"
   }
   bastion = {
-    department  = "finance"
-    environment = "dev"
+    department  = "finance",
+    environment = "dev",
     role        = "bastion"
   }
   operator = {
-    department = "finance"
-    environment = "dev"
+    department = "finance",
+    environment = "dev",
     role        = "operator"
   }
 }
@@ -474,17 +474,41 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |e.g.
 [source]
 node_pools = {
-  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
-  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
-  np3 = {shape="VM.Standard.E2.2",node_pool_size=1} 
+  np1 = {
+    shape = "VM.Standard.E3.Flex",
+    ocpus = 2,
+    node_pool_size = 2,
+    boot_volume_size = 150
+  },
+  np2 = {
+    shape = "VM.Standard.E2.2",
+    node_pool_size = 2,
+    boot_volume_size = 150
+  },
+  np3 = {
+    shape = "VM.Standard.E2.2",
+    node_pool_size = 1
+  } 
 }
  
 |
 [source]
 node_pools = {
-  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
-  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
-  np3 = {shape="VM.Standard.E2.2",node_pool_size=1}
+  np1 = {
+    shape = "VM.Standard.E3.Flex",
+    ocpus = 2,
+    node_pool_size = 2,
+    boot_volume_size = 150
+  },
+  np2 = {
+    shape = "VM.Standard.E2.2",
+    node_pool_size = 2,
+    boot_volume_size = 150
+  },
+  np3 = {
+    shape = "VM.Standard.E2.2",
+    node_pool_size = 1
+  } 
 }
 
 |`node_pools_to_drain`
