--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -46,7 +46,6 @@
 :uri-terraform-oke-sample: https://github.com/terraform-providers/terraform-provider-oci/tree/master/examples/container_engine
 :uri-terraform-options: {uri-docs}/terraformoptions.adoc
 :uri-install-kubectl: https://kubernetes.io/docs/tasks/tools/install-kubectl/
-:uri-helm: https://helm.sh/
 :uri-metricserver: https://kubernetes.io/docs/tasks/debug-application-cluster/resource-metrics-pipeline/#metrics-server
 :uri-k8s-dashboard: http://localhost:8001/api/v1/namespaces/kube-system/services/https:kubernetes-dashboard:/proxy/
 :uri-psp: https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengusingpspswithoke.htm#Using_Pod_Security_Polices_with_Container_Engine_for_Kubernetes
@@ -64,7 +63,6 @@
 .. link:#recommendations-for-using-instance_principal[Recommendations for using instance_principal]
 . link:#interacting-with-the-oke-cluster[Interacting with the OKE Cluster locally]
 . link:#creating-a-secret-for-ocir[Creating a Secret for OCIR]
-. link:#installing-helm[Installing helm]
 . link:#installing-calico[Installing Calico]
 . link:#installing-kubernetes-metrics-server[Installing Kubernetes Metrics Server]
 . link:#scaling-the-number-of-node-pools[Scaling the number of node pools]
@@ -168,7 +166,7 @@ You can then copy the ssh_to_operator command, paste and run it in a terminal.
 
 Any user who has access to the instance (who can SSH to the instance), automatically inherits the privileges granted to the instance. Before you enable this feature, ensure that you know who can access it, and that they should be authorized with the permissions you are granting to the instance.
 
-By default, this feature is *_disabled_*. However, it is *_required_* at the time of cluster creation *_if_* you wish to enable link:#kms-integration[KMS Integration], calico, metricserver, helm or creating the OCIR secret.
+By default, this feature is *_disabled_*. However, it is *_required_* at the time of cluster creation *_if_* you wish to enable link:#kms-integration[KMS Integration], calico, metricserver or creating the OCIR secret.
 
 When you enable this feature, by default, the operator host will have privileges to all resources in the compartment. If you are enabling it for link:#kms-integration[KMS Integration], the operator host will also have rights to create policies in the root tenancy. 
 
@@ -205,7 +203,7 @@ terraform apply
 ==== Recommendations for using instance_principal
 
 . Do not enable instance_principal if you are not using link:#kms-integration[KMS Integration] or calico
-. Enable instance_principal *_if and only if_* you are using link:#kms-integration[KMS Integration], calico, metricserver, helm or creating the OCIR secret.
+. Enable instance_principal *_if and only if_* you are using link:#kms-integration[KMS Integration], calico, metricserver or creating the OCIR secret.
 . Disable instance_principal once the cluster is created
 
 === Interacting with the OKE Cluster
@@ -240,12 +238,6 @@ If you plan on creating a Kubernetes Secret for OCIR, you must first {uri-oci-au
 You must then {uri-oci-secret}[create a Secret in OCI Vault to store] the value of the Auth Token in it. 
 
 Finally, assign the Secret OCID to *secret_id* in terraform.tfvars. Refer to {uri-terraform-options}#ocir[OCIR parameters] for other parameters to be set.
-
-=== Installing helm
-
-{uri-helm}[Helm] is a package manager for kubernetes. If you want to install helm on the operator host, set the parameter *helm_enabled = true* in terraform.tfvars. By default, it is set to false. 
-
-An alias "*h*" will be created for helm on the operator host. For other available parameters, refer to {uri-terraform-options}#helm[Helm parameters].
 
 === Installing Calico 
 
