--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -116,7 +116,7 @@ provider "oci" {
 ----
 module "oke" {
   source  = "oracle-terraform-modules/oke/oci"
-  version = "2.2.2"
+  version = "2.3.2"
   # insert the 9 required variables here
 }
 ----
@@ -145,8 +145,8 @@ module "oke" {
   bastion_shape                         =   var.bastion_shape
   bastion_timezone                      =   var.bastion_timezone
 
-  admin_shape                           =   var.admin_shape
-  admin_timezone                        =   var.admin_timezone
+  operator_shape                           =   var.operator_shape
+  operator_timezone                        =   var.operator_timezone
 
   # add additional parameters for availability_domains, oke etc as you need
 
