--- a/docs/prerequisites.adoc
+++ b/docs/prerequisites.adoc
@@ -41,10 +41,13 @@ You can proceed to {uri-instructions}[creating the cluster] if you have already 
 
 == Identity and Access Management Rights
 
-The Terraform user must have the rights to:
+The Terraform user must have the permission to:
 
 . manage dynamic groups
 . manage policies in root tenancy
+. manage cluster-family in compartment
+. manage virtual-network-family in compartment
+. manage instance-family in compartment
 
 == Install Terraform
 
