--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -458,6 +458,7 @@ a|The number, shape of node pools and node_pool_size to create. Each key and tup
 
 * shape defines the worker node shape to use for each pool
 * ocpus defines the number of OCPUs that will be used if VM.Standard.E3.Flex shape is used
+* memory defines the amount of memory in GBs that will be used if VM.Standard.E3.Flex shape is used
 * node_pool_size defines the number of worker nodes in each nodepool
 * boot_volume_size defines the custom boot volume size in GBs for the worker nodes.
 
@@ -465,6 +466,7 @@ If an empty nodepool like np3 = {} is specified, then a nodepool will default va
 
 * shape=VM.Standard.E3.Flex
 * ocpus=1
+* memory=16
 * node_pool_size=1
 * boot_volume_size=50
 
@@ -472,7 +474,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |e.g.
 [source]
 node_pools = {
-  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
+  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,memory=20,node_pool_size=2,boot_volume_size=150}
   np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
   np3 = {shape="VM.Standard.E2.2",node_pool_size=1} 
 }
