--- a/docs/topology.adoc
+++ b/docs/topology.adoc
@@ -181,7 +181,7 @@ When using this project to create the node pools, the following is done:
 
 ----
 node_pools = {
-  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
+  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,memory=20,node_pool_size=2,boot_volume_size=150}
   np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
 }
 ----
