--- a/docs/dependencies.adoc
+++ b/docs/dependencies.adoc
@@ -49,3 +49,9 @@ The following table documents the {uri-terraform-options}[Terraform Options] dep
 |use_encryption
 |Uses OCI KMS to encrypt data in OKE's underlying etcd
 |bastion_enabled = true, operator_enabled = true, admin_instance_principal = true
+
+|vpa
+|Installs Kubernetes Vertical Pod Autoscaler
+|bastion_enabled = true, operator_enabled = true, admin_instance_principal = true, metricserver_enabled = true
+
+|===
