--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,9 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
+= 2.3.3 (October 30, 2020)
+* Upgraded base module to 1.3.3 to temporarily disable OSMS as fix for #225
+
 == 2.3.2 (August 19, 2020)
 * Unable to install kube in operator (#197)
 * node_pool_image_id value should be "none" in case no custom image is used. In previous versions, this was in upper case (#207)
